# MNiShed

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN_lakes.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: build-check.yml  lint.yml  publish.yml  tests.yml
benchmarks/: bench_jit.py  plot_jit.py
docs/: requirements.txt
docs/figures/: plot_crow_wing_seasonal.py  plot_frozen_ground.py  plot_hydrograph_separation.py  plot_identifiability.py  plot_lake.py  plot_pdm.py  plot_phenology_Kc.py  plot_phenology_senescence.py  plot_recession.py  plot_reservoir_recession.py  plot_seasonal_mass_balance.py  plot_snowpack.py  plot_tile.py
docs/source/: api.rst  benchmarks.rst  bmi.rst  calibration.rst  conf.py  configuration.rst  example_crow_wing.rst  index.rst  input_contract.rst  installation.rst  model_description.rst  priors.rst  quickstart.rst  recession_analysis.rst  references.rst  tutorial.rst
examples/cannon_forward/: README.md  cannon_cfg.yml  run_forward.py
examples/cannon_inverse/: README.md  calibrate.py  cannon_cfg_template.yml  dakota.in  dakota_bayes.in  driver.py  driver_bayes.py  generate_dakota_in.py  make_bayes_data.py  params.yml  plot_best.py  run.sh  run_driver_bayes.sh  run_sceua.py  run_spotpy.py
examples/crow_wing/: README.md  calibrate.py  crow_wing_config.yml  crow_wing_forcing.csv  params.yml
hydroravens/: __init__.py  bmi.py  calibration.py  hydrograph_separation.py  hydroravens.py  priors.py  recession.py
mnished/: __init__.py  bmi.py  calibration.py  cli.py  diagnostics.py  hydrograph_separation.py  identifiability.py  io.py  mnished.py  priors.py  recession.py
notes/: HANDOFF_K_threshold_diffusion_length.md  HANDOFF_f_route_lake.md  HANDOFF_gdd_phenology_crow_wing.md  HANDOFF_gdd_phenology_crow_wing_RESULTS.md  HANDOFF_lake_support.md  HANDOFF_phenology_refactor_crow_wing.md  HANDOFF_photoperiod_senescence_crow_wing.md  HANDOFF_thornthwaite_ET_phenology.md  README.md  REPORT_cannon_bayesian_identifiability.md
tests/: test_backcompat_flat_states.py  test_bmi.py  test_buckets.py  test_calibration_robustness.py  test_calibrator.py  test_diagnostics.py  test_hydrograph_separation.py  test_identifiability.py  test_io.py  test_jit_availability.py  test_lakes.py  test_log_flow_residuals.py  test_multipath.py  test_phenology.py  test_priors.py  test_recession.py  test_reservoir.py  test_scoring_model.py  test_snowpack.py  test_sub_catchments.py  test_water_balance.py
