[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mnished"]

[project]
name = "MNiShed"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "scipy",
]
requires-python = ">=3.9"
authors = [
  { name="Andrew D. Wickert", email="awickert@umn.edu" },
]
description = "Miniature lumped-parameter watershed hydrological model"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
  "hydrology",
  "linear reservoir",
  "rainfall-runoff",
  "snow",
  "streamflow",
  "discharge",
  "water balance",
  "evapotranspiration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
docs = [
  "sphinx>=4.0",
  "sphinx-rtd-theme>=1.0",
]
bmi = [
  "bmipy>=2.0",
]

[tool.setuptools.dynamic]
version = {attr = "mnished._version.__version__"}

[project.scripts]
mnished = "mnished.cli:run"

[project.urls]
Homepage = "https://csdms.colorado.edu/wiki/Model:MNiShed"
Repository = "https://github.com/MNiMORPH/MNiShed"
Documentation = "https://mnished.readthedocs.io/"
Issues = "https://github.com/MNiMORPH/MNiShed/issues"
