[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mnished"]

[project]
name = "MNiShed"
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "scipy",
]
requires-python = ">=3.9"
authors = [
  { name="Andrew D. Wickert", email="awickert@umn.edu" },
]
description = "Miniature lumped-parameter watershed hydrological model"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
  "hydrology",
  "linear reservoir",
  "rainfall-runoff",
  "snow",
  "streamflow",
  "discharge",
  "water balance",
  "evapotranspiration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
docs = [
  "sphinx>=4.0",
  "sphinx-rtd-theme>=1.0",
]
bmi = [
  "bmipy>=2.0",
]
lint = [
  "ruff",
]

[tool.setuptools.dynamic]
version = {attr = "mnished._version.__version__"}

[project.scripts]
mnished = "mnished.cli:run"

[project.urls]
Homepage = "https://csdms.colorado.edu/wiki/Model:MNiShed"
Repository = "https://github.com/MNiMORPH/MNiShed"
Documentation = "https://mnished.readthedocs.io/"
Issues = "https://github.com/MNiMORPH/MNiShed/issues"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
# pyflakes (F) plus the meaningful pycodestyle errors and warnings. The E1/E2
# whitespace rules are deliberately not selected: the project uses manual
# vertical alignment (see CONTRIBUTING.md), which those rules would fight.
select = ["E4", "E5", "E7", "E9", "F", "W"]
ignore = [
  "E741",  # ambiguous single-letter names; conventional in scientific code
]

[tool.ruff.lint.per-file-ignores]
# Emits a Dakota input-file template; one copy_files line is necessarily long.
"examples/cannon_inverse/generate_dakota_in.py" = ["E501"]
